--- a/magecity/index.html
+++ b/magecity/index.html
@@ -55,6 +55,18 @@
     var classes = [
         'blank',
         'grass',
+        'grass-smash-1',
+        'grass-smash-2',
+        'grass-cherries-1',
+        'grass-cherries-2',
+        'grass-shadow-top-left',
+        'grass-shadow-top-left-short',
+        'grass-shadow-left',
+        'grass-shadow-bottom-left',
+        'grass-shadow-overlay-top-left',
+        'grass-shadow-overlay-top-left-short',
+        'grass-shadow-overlay-left',
+        'grass-shadow-overlay-bottom-left',
         'stone',
         'stone-weed',
         'grass-to-stone-left',
@@ -65,9 +77,6 @@
         'grass-with-stone-bottom-right',
         'grass-with-stone-top-left',
         'grass-with-stone-top-right',
-        'grass-shadow-top-left',
-        'grass-shadow-top-left-short',
-        'grass-shadow-left',
 
         'brick-shadow-top-left',
         'brick-shadow-top-center',
