added leaves with grass

--- a/magecity/index.html
+++ b/magecity/index.html
@@ -67,6 +67,13 @@
         'grass-shadow-overlay-top-left-short',
         'grass-shadow-overlay-left',
         'grass-shadow-overlay-bottom-left',
+        'double pumpkin--grass',
+        'double pumpkins--grass',
+        'double leaves-2--grass',
+        'double leaves-3--grass',
+        'double leaves-4--grass',
+        'double leaves-5--grass',
+        'double leaves-5-1--grass',
         'stone',
         'stone-weed',
         'grass-to-stone-left',
