--- a/magecity/index.html
+++ b/magecity/index.html
@@ -67,13 +67,13 @@
         'grass-shadow-overlay-top-left-short',
         'grass-shadow-overlay-left',
         'grass-shadow-overlay-bottom-left',
-        'double pumpkin--grass',
-        'double pumpkins--grass',
-        'double leaves-2--grass',
-        'double leaves-3--grass',
-        'double leaves-4--grass',
-        'double leaves-5--grass',
-        'double leaves-5-1--grass',
+        'double pumpkin_grass',
+        'double pumpkins_grass',
+        'double leaves-2_grass',
+        'double leaves-3_grass',
+        'double leaves-4_grass',
+        'double leaves-5_grass',
+        'double leaves-5-1_grass',
         'stone',
         'stone-weed',
         'grass-to-stone-left',
@@ -155,10 +155,10 @@
         'roof-wood-bottom-right',
         'roof-wood-front-arch-left',
         'roof-wood-front-arch-right',
-        'double roof-wood-top-left--grass',
-        'double roof-wood-top-right--grass',
-        'double roof-wood-top-left--sand-wall',
-        'double roof-wood-top-right--sand-wall',
+        'double roof-wood-top-left_grass',
+        'double roof-wood-top-right_grass',
+        'double roof-wood-top-left_sand-wall',
+        'double roof-wood-top-right_sand-wall',
 
         'roof-bamboo-top-left',
         'roof-bamboo-top-center',
@@ -171,10 +171,10 @@
         'roof-bamboo-bottom-right',
         'roof-bamboo-front-arch-left',
         'roof-bamboo-front-arch-right',
-        'double roof-bamboo-top-left--grass',
-        'double roof-bamboo-top-right--grass',
-        'double roof-bamboo-top-left--sand-wall',
-        'double roof-bamboo-top-right--sand-wall',
+        'double roof-bamboo-top-left_grass',
+        'double roof-bamboo-top-right_grass',
+        'double roof-bamboo-top-left_sand-wall',
+        'double roof-bamboo-top-right_sand-wall',
 
         // items
         'herb-full',
