convert double dash to underscore

--- a/magecity/index.html
+++ b/magecity/index.html
@@ -85,12 +85,18 @@
         'grass-with-stone-top-left',
         'grass-with-stone-top-right',
 
-        'brick-shadow-top-left',
-        'brick-shadow-top-center',
-        'brick-shadow-top-right',
         'brick-left',
         'brick-center',
         'brick-right',
+        'brick-shadow-top-left',
+        'brick-shadow-top-center',
+        'brick-shadow-top-right',
+        'brick-shadow-top-left-corner',
+        'brick-shadow-top-left-corner-dark',
+        'brick-shadow-left-edge',
+        'brick-shadow-left-edge-dark',
+        'brick-shadow-left-edge-grass',
+        'brick-shadow-left-edge-grass-dark',
         'brick-grass-bottom-left',
         'brick-grass-bottom-center',
         'brick-grass-bottom-right',
