--- a/magecity/index.html
+++ b/magecity/index.html
@@ -166,6 +166,8 @@
         'double roof-wood-top-left_sand-wall',
         'double roof-wood-top-right_sand-wall',
 
+        'doorway',
+
         'roof-bamboo-top-left',
         'roof-bamboo-top-center',
         'roof-bamboo-top-right',
