--- a/magecity/index.html
+++ b/magecity/index.html
@@ -167,6 +167,8 @@
         'double roof-wood-top-right_sand-wall',
 
         'doorway',
+        'doorway-down-stone',
+        'doorway-down-cobble-stone',
 
         'roof-bamboo-top-left',
         'roof-bamboo-top-center',
