added some leaf shadows

--- a/magecity/index.html
+++ b/magecity/index.html
@@ -74,6 +74,10 @@
         'double leaves-4_grass',
         'double leaves-5_grass',
         'double leaves-5-1_grass',
+        'double leaves-2_grass-shadow-top-left',
+        'double leaves-2_grass-shadow-top-left-short',
+        'double leaves-2_grass-shadow-left',
+        'double leaves-2_grass-shadow-bottom-left',
         'stone',
         'stone-weed',
         'grass-to-stone-left',
